// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data helpers for Express routes Data helpers for default pages should overwrite default page data when extra data provided 1`] = `
Object {
  "appState": "User",
  "postsNavigation": Array [
    Object {
      "endpoint": "/publish/article",
      "icon": "📄",
      "name": "Article",
      "type": "article",
    },
    Object {
      "endpoint": "/publish/note",
      "icon": "📔",
      "name": "Note",
      "type": "note",
    },
    Object {
      "endpoint": "/publish/reply",
      "icon": "↪",
      "name": "Reply",
      "type": "reply",
    },
    Object {
      "endpoint": "/publish/rsvp",
      "icon": "↪",
      "name": "RSVP",
      "type": "rsvp",
    },
    Object {
      "endpoint": "/publish/like",
      "icon": "♥",
      "name": "Like",
      "type": "like",
    },
    Object {
      "endpoint": "/publish/repost",
      "icon": "♺",
      "name": "Repost",
      "type": "repost",
    },
    Object {
      "endpoint": "/publish/photo",
      "icon": "📷",
      "name": "Photo",
      "type": "photo",
    },
    Object {
      "endpoint": "/publish/video",
      "icon": "🎥",
      "name": "Video",
      "type": "video",
    },
    Object {
      "endpoint": "/publish/event",
      "icon": "📅",
      "name": "Event",
      "type": "event",
    },
  ],
  "subtitle": "A micropub client",
  "title": "Celestial",
  "user": Object {
    "indieauth": Object {
      "identity": "https://example.com",
    },
    "microformats": Object {
      "name": "John Doe",
      "photo": "https://example.com/",
    },
    "preferences": Object {
      "formEncoding": "application/x-www-form-urlencoded",
      "timezone": "Asia/Kolkata",
    },
  },
  "version": "0.12.1",
}
`;

exports[`Data helpers for Express routes Data helpers for default pages should return default page data when no extra data provided 1`] = `
Object {
  "appState": "User",
  "postsNavigation": Array [
    Object {
      "endpoint": "/publish/article",
      "icon": "📄",
      "name": "Article",
      "type": "article",
    },
    Object {
      "endpoint": "/publish/note",
      "icon": "📔",
      "name": "Note",
      "type": "note",
    },
    Object {
      "endpoint": "/publish/reply",
      "icon": "↪",
      "name": "Reply",
      "type": "reply",
    },
    Object {
      "endpoint": "/publish/rsvp",
      "icon": "↪",
      "name": "RSVP",
      "type": "rsvp",
    },
    Object {
      "endpoint": "/publish/like",
      "icon": "♥",
      "name": "Like",
      "type": "like",
    },
    Object {
      "endpoint": "/publish/repost",
      "icon": "♺",
      "name": "Repost",
      "type": "repost",
    },
    Object {
      "endpoint": "/publish/photo",
      "icon": "📷",
      "name": "Photo",
      "type": "photo",
    },
    Object {
      "endpoint": "/publish/video",
      "icon": "🎥",
      "name": "Video",
      "type": "video",
    },
    Object {
      "endpoint": "/publish/event",
      "icon": "📅",
      "name": "Event",
      "type": "event",
    },
  ],
  "subtitle": "A micropub client",
  "title": "Celestial",
  "user": Object {
    "indieauth": Object {
      "identity": "https://example.com",
    },
    "microformats": Object {
      "name": "Jane",
      "photo": "https://example.com/",
    },
    "preferences": Object {
      "formEncoding": "application/x-www-form-urlencoded",
      "timezone": "Asia/Kolkata",
    },
  },
  "version": "0.12.1",
}
`;

exports[`Data helpers for Express routes Data helpers for default pages should return merged page data when extra data provided 1`] = `
Object {
  "appState": "User",
  "postsNavigation": Array [
    Object {
      "endpoint": "/publish/article",
      "icon": "📄",
      "name": "Article",
      "type": "article",
    },
    Object {
      "endpoint": "/publish/note",
      "icon": "📔",
      "name": "Note",
      "type": "note",
    },
    Object {
      "endpoint": "/publish/reply",
      "icon": "↪",
      "name": "Reply",
      "type": "reply",
    },
    Object {
      "endpoint": "/publish/rsvp",
      "icon": "↪",
      "name": "RSVP",
      "type": "rsvp",
    },
    Object {
      "endpoint": "/publish/like",
      "icon": "♥",
      "name": "Like",
      "type": "like",
    },
    Object {
      "endpoint": "/publish/repost",
      "icon": "♺",
      "name": "Repost",
      "type": "repost",
    },
    Object {
      "endpoint": "/publish/photo",
      "icon": "📷",
      "name": "Photo",
      "type": "photo",
    },
    Object {
      "endpoint": "/publish/video",
      "icon": "🎥",
      "name": "Video",
      "type": "video",
    },
    Object {
      "endpoint": "/publish/event",
      "icon": "📅",
      "name": "Event",
      "type": "event",
    },
  ],
  "priority": "high",
  "subtitle": "A micropub client",
  "title": "Celestial",
  "user": Object {
    "indieauth": Object {
      "identity": "https://example.com",
    },
    "microformats": Object {
      "name": "Jane",
      "photo": "https://example.com/",
    },
    "preferences": Object {
      "formEncoding": "application/x-www-form-urlencoded",
      "timezone": "Asia/Kolkata",
    },
  },
  "version": "0.12.1",
}
`;

exports[`Data helpers for Express routes Data helpers for post pages should overwrite default post data when extra data provided 1`] = `
Object {
  "appState": "User",
  "formDefaults": Object {
    "published": Object {
      "date": "2020-01-01",
      "time": "10:00",
    },
  },
  "micropub": Object {
    "media-endpoint": undefined,
    "syndicate-to": undefined,
  },
  "postsNavigation": Array [
    Object {
      "endpoint": "/publish/article",
      "icon": "📄",
      "name": "Article",
      "type": "article",
    },
    Object {
      "endpoint": "/publish/note",
      "icon": "📔",
      "name": "Note",
      "type": "note",
    },
    Object {
      "endpoint": "/publish/reply",
      "icon": "↪",
      "name": "Reply",
      "type": "reply",
    },
    Object {
      "endpoint": "/publish/rsvp",
      "icon": "↪",
      "name": "RSVP",
      "type": "rsvp",
    },
    Object {
      "endpoint": "/publish/like",
      "icon": "♥",
      "name": "Like",
      "type": "like",
    },
    Object {
      "endpoint": "/publish/repost",
      "icon": "♺",
      "name": "Repost",
      "type": "repost",
    },
    Object {
      "endpoint": "/publish/photo",
      "icon": "📷",
      "name": "Photo",
      "type": "photo",
    },
    Object {
      "endpoint": "/publish/video",
      "icon": "🎥",
      "name": "Video",
      "type": "video",
    },
    Object {
      "endpoint": "/publish/event",
      "icon": "📅",
      "name": "Event",
      "type": "event",
    },
  ],
  "subtitle": "A micropub client",
  "title": "Celestial",
  "user": Object {
    "indieauth": Object {
      "identity": "https://example.com",
    },
    "microformats": Object {
      "name": "Jane",
      "photo": "https://example.com/",
    },
    "preferences": Object {
      "formEncoding": "application/x-www-form-urlencoded",
      "timezone": "Asia/Kolkata",
    },
  },
  "version": "0.12.1",
}
`;

exports[`Data helpers for Express routes Data helpers for post pages should return default post data when no extra data provided 1`] = `
Object {
  "appState": "User",
  "formDefaults": Object {
    "published": Object {
      "date": "2016-12-22",
      "time": "05:06",
    },
  },
  "micropub": Object {
    "media-endpoint": undefined,
    "syndicate-to": undefined,
  },
  "postsNavigation": Array [
    Object {
      "endpoint": "/publish/article",
      "icon": "📄",
      "name": "Article",
      "type": "article",
    },
    Object {
      "endpoint": "/publish/note",
      "icon": "📔",
      "name": "Note",
      "type": "note",
    },
    Object {
      "endpoint": "/publish/reply",
      "icon": "↪",
      "name": "Reply",
      "type": "reply",
    },
    Object {
      "endpoint": "/publish/rsvp",
      "icon": "↪",
      "name": "RSVP",
      "type": "rsvp",
    },
    Object {
      "endpoint": "/publish/like",
      "icon": "♥",
      "name": "Like",
      "type": "like",
    },
    Object {
      "endpoint": "/publish/repost",
      "icon": "♺",
      "name": "Repost",
      "type": "repost",
    },
    Object {
      "endpoint": "/publish/photo",
      "icon": "📷",
      "name": "Photo",
      "type": "photo",
    },
    Object {
      "endpoint": "/publish/video",
      "icon": "🎥",
      "name": "Video",
      "type": "video",
    },
    Object {
      "endpoint": "/publish/event",
      "icon": "📅",
      "name": "Event",
      "type": "event",
    },
  ],
  "subtitle": "A micropub client",
  "title": "Celestial",
  "user": Object {
    "indieauth": Object {
      "identity": "https://example.com",
    },
    "microformats": Object {
      "name": "Jane",
      "photo": "https://example.com/",
    },
    "preferences": Object {
      "formEncoding": "application/x-www-form-urlencoded",
      "timezone": "Asia/Kolkata",
    },
  },
  "version": "0.12.1",
}
`;

exports[`Data helpers for Express routes Data helpers for post pages should return merged post data when extra data provided 1`] = `
Object {
  "appState": "User",
  "formDefaults": Object {
    "published": Object {
      "date": "2016-12-22",
      "time": "05:06",
    },
  },
  "micropub": Object {
    "media-endpoint": undefined,
    "syndicate-to": undefined,
  },
  "postsNavigation": Array [
    Object {
      "endpoint": "/publish/article",
      "icon": "📄",
      "name": "Article",
      "type": "article",
    },
    Object {
      "endpoint": "/publish/note",
      "icon": "📔",
      "name": "Note",
      "type": "note",
    },
    Object {
      "endpoint": "/publish/reply",
      "icon": "↪",
      "name": "Reply",
      "type": "reply",
    },
    Object {
      "endpoint": "/publish/rsvp",
      "icon": "↪",
      "name": "RSVP",
      "type": "rsvp",
    },
    Object {
      "endpoint": "/publish/like",
      "icon": "♥",
      "name": "Like",
      "type": "like",
    },
    Object {
      "endpoint": "/publish/repost",
      "icon": "♺",
      "name": "Repost",
      "type": "repost",
    },
    Object {
      "endpoint": "/publish/photo",
      "icon": "📷",
      "name": "Photo",
      "type": "photo",
    },
    Object {
      "endpoint": "/publish/video",
      "icon": "🎥",
      "name": "Video",
      "type": "video",
    },
    Object {
      "endpoint": "/publish/event",
      "icon": "📅",
      "name": "Event",
      "type": "event",
    },
  ],
  "priority": "high",
  "subtitle": "A micropub client",
  "title": "Celestial",
  "user": Object {
    "indieauth": Object {
      "identity": "https://example.com",
    },
    "microformats": Object {
      "name": "Jane",
      "photo": "https://example.com/",
    },
    "preferences": Object {
      "formEncoding": "application/x-www-form-urlencoded",
      "timezone": "Asia/Kolkata",
    },
  },
  "version": "0.12.1",
}
`;
